# vscode-win32-app-container-tokens

./: .gitignore  .npmignore  Cargo.toml  README.md  binding.gyp  ci.yml  index.test.mjs  package-lock.json  package.json  tsconfig.json
.config/1espt/: PipelineAutobaseliningConfig.yml
.github/workflows/: ci.yml
npm/win32-arm64-msvc/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
src/: index.test.ts  index.ts  lib.rs  native.cpp
